# rm-widget

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile_lambda  devcontainer.json
api/: get_data.py
