[tool.poetry]
name = "rm-widget"
version = "0.1.0"
description = ""
authors = ["Hattomo (TomohiroHattori) <45988993+Hattomo@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "rm-widget"}]

[tool.poetry.dependencies]
python = "^3.10"
# https://download.pytorch.org/whl/torch_stable.html
# torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp310-cp310-linux_x86_64.whl"}
# torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.1.0%2Bcu121-cp310-cp310-linux_x86_64.whl"}
# torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.0%2Bcu121-cp310-cp310-linux_x86_64.whl"}
selenium = "^4.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
yapf = "^0.40.1"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
